--- a/index.html
+++ b/index.html
@@ -1,21 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="././css/style.css" >
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="././css/style.css" />
     <title>Document</title>
     <!--BOOTSTRAP CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="header text-center p-5">
+      <h1 class="mb-3">Bootstrap 5 Responsive Grid</h1>
+      <h2 class="fw-lighter">
+        Layout a griglia con diversi breakpoint (sm,md,lg)
+      </h2>
+    </div>
+    <div class="container">
+      <!--prima e seconda colonna-->
+      <div class="row">
+        <div class="col-12 bg-light p-4 col-md-6">
+          <h3 class="fs-1">Colonna 1</h3>
+          <p class="fs-3 mb-5">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
+            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+          </p>
+        </div>
+        <div class="col-12 bg-secondary text-light p-4 col-md-6">
+          <h3 class="fs-1">Colonna 2</h3>
+          <p class="fs-3 mb-5">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
+            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+          </p>
+        </div>
+      </div>
 
+      <div class="row">
+        <div class="col-6 bg-primary mt-5 text-light p-4 col-md-4">
+          <h3 class="fs-1">Colonna 1</h3>
+          <p class="fs-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
+            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+          </p>
+        </div>
+        <div class="col-6 bg-success mt-5 text-light p-4 col-md-4">
+          <h3 class="fs-1">Colonna 2</h3>
+          <p class="fs-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
+            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+          </p>
+        </div>
 
+        <div class="col-12 bg-danger text-light p-4 col-md-4 mt-md-5">
+          <h3 class="fs-1">Colonna 3</h3>
+          <p class="fs-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
+            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+          </p>
+        </div>
+      </div>
 
+      <!--TERZO BLOCCO-->
+      <div class="row">
+        <div class="col-6 bg-info mt-5 p-4 text-light col-md-3 mb-md-5">
+          <h3 class="fs-1">Colonna 1</h3>
+          <p class="fs-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
+            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+          </p>
+        </div>
 
+        <div class="col-6 bg-warning mt-5 p-4 text-light col-md-3 mb-md-5">
+          <h3 class="fs-1">Colonna 2</h3>
+          <p class="fs-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
+            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+          </p>
+        </div>
 
+        <div class="col-6 bg-dark p-4 mb-5 text-light col-md-3 mt-md-5">
+          <h3 class="fs-1">Colonna 3</h3>
+          <p class="fs-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
+            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+          </p>
+        </div>
 
-<!--BOOTSRAP JS-->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
-</body>
+        <div class="col-6 bg-light p-4 mb-5 text-dark col-md-3 mt-md-5">
+          <h3 class="fs-1">Colonna 4</h3>
+          <p class="fs-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
+            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!--BOOTSRAP JS-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
