--- a/index.html
+++ b/index.html
@@ -23,43 +23,43 @@
     <div class="container">
       <!--prima e seconda colonna-->
       <div class="row">
-        <div class="col-12 bg-light p-4 col-md-6">
+        <div class="col-12 bg-light p-4 col-md-6 col-lg-4">
           <h3 class="fs-1">Colonna 1</h3>
           <p class="fs-3 mb-5">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
-            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+            Larghezza intera su dispositivi piccoli, metà larghezza su
+            dispositivi medi e un terzo su dispositivi grandi
           </p>
         </div>
-        <div class="col-12 bg-secondary text-light p-4 col-md-6">
+        <div class="col-12 bg-secondary text-light p-4 col-md-6 col-lg-8">
           <h3 class="fs-1">Colonna 2</h3>
           <p class="fs-3 mb-5">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
-            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+            Larghezza intera su dispositivi piccoli, metà larghezza su
+            dispositivi medi e due terzi su dispositivi grandi.
           </p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-6 bg-primary mt-5 text-light p-4 col-md-4">
+        <div class="col-6 bg-primary mt-5 text-light p-4 col-md-4 col-lg-4">
           <h3 class="fs-1">Colonna 1</h3>
           <p class="fs-3">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
-            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+            Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi
+            e più grandi.
           </p>
         </div>
-        <div class="col-6 bg-success mt-5 text-light p-4 col-md-4">
+        <div class="col-6 bg-success mt-5 text-light p-4 col-md-4 col-lg-4">
           <h3 class="fs-1">Colonna 2</h3>
           <p class="fs-3">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
-            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+            Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi
+            e più grandi.
           </p>
         </div>
 
-        <div class="col-12 bg-danger text-light p-4 col-md-4 mt-md-5">
+        <div class="col-12 bg-danger text-light p-4 col-md-4 mt-md-5 col-lg-4">
           <h3 class="fs-1">Colonna 3</h3>
           <p class="fs-3">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
-            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+            Metà larghezza su dispositivi piccoli (col-12) e un terzo su
+            dispositivi medi e più grandi.
           </p>
         </div>
       </div>
@@ -69,32 +69,32 @@
         <div class="col-6 bg-info mt-5 p-4 text-light col-md-3 mb-md-5">
           <h3 class="fs-1">Colonna 1</h3>
           <p class="fs-3">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
-            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+            Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+            medi e più grandi.
           </p>
         </div>
 
         <div class="col-6 bg-warning mt-5 p-4 text-light col-md-3 mb-md-5">
           <h3 class="fs-1">Colonna 2</h3>
           <p class="fs-3">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
-            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+            Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+            medi e più grandi.
           </p>
         </div>
 
         <div class="col-6 bg-dark p-4 mb-5 text-light col-md-3 mt-md-5">
           <h3 class="fs-1">Colonna 3</h3>
           <p class="fs-3">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
-            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+            Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+            medi e più grandi.
           </p>
         </div>
 
         <div class="col-6 bg-light p-4 mb-5 text-dark col-md-3 mt-md-5">
           <h3 class="fs-1">Colonna 4</h3>
           <p class="fs-3">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod
-            corrupti beatae doloribus pariatur unde aperiam quisquam ullam! Odit
+            Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+            medi e più grandi.
           </p>
         </div>
       </div>
